# redisai-py

./: .bumpversion.cfg  .deepsource.toml  .gitignore  Dockerfile  LICENSE  README.md  README.rst  codecov.yml  example.py  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
.circleci/: circle_requirements.txt  config.yml
.github/workflows/: check-pypi.yml  codeql.yml  integration.yml  linters.yml  publish-pypi.yml
docs/: api.rst  conf.py  index.rst
redisai/: __init__.py  _util.py  base.py  client.py  cluster_client.py  command_builder.py  constants.py  containers.py  convert.py  dag.py  model.py  pipeline.py  post_processor.py  postprocessor.py  redisai_ops.py  tensor.py  tensorize.py  test.py  utils.py  version.py
redisai/model/: __init__.py  exporter.py  importer.py  onnx_utils.py
test/: test.py  test_model.py
test/testdata/: pt-minimal.pt
tests/: test_ai.py
