[tool.poetry]
name = "redisai"
version = "1.0.2"
description = "RedisAI Python Client"
authors = ["RedisLabs <oss@redislabs.com>"]
license = "BSD-3-Clause"
readme = "README.rst"

packages = [
    { include = 'redisai' },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Database'
]

[tool.poetry.dependencies]
python = "^3.6"
redis = ">=2.10"
hiredis = ">=0.20"
numpy = ">=1.19.5"

[tool.poetry.dev-dependencies]
codecov = "^2.1.11"
flake8 = "^3.9.2"
rmtest = "^0.7.0"
nose = "^1.3.7"
ml2rt = "^0.2.0"

[tool.poetry.urls]
url = "https://redisai.io"
repository = "https://github.com/RedisAI/redisai-py"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
