[tool.poetry]
name = "redisai"
version = "1.0.2"
description = "RedisAI Python Client"
authors = ["RedisLabs <oss@redislabs.com>"]
license = "BSD-3-Clause"
readme = "README.rst"

packages = [
    { include = 'redisai' },
]

classifiers = [
    'Topic :: Database',
    'Programming Language :: Python',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable'
]

[tool.poetry.dependencies]
python = ">=3.6,<3.10"
redis = ">=2.10"
hiredis = ">=0.20"
numpy = ">=1.19.5"
six = ">=1.10.0"
Deprecated = "^1.2.12"

[tool.poetry.dev-dependencies]
codecov = "^2.1.11"
flake8 = "^3.9.2"
rmtest = "^0.7.0"
nose = "^1.3.7"
ml2rt = "^0.2.0"
tox = ">=3.23.1"
tox-poetry = "^0.3.0"
Sphinx = "^4.1.2"
sphinx-rtd-theme = "^0.5.2"
readthedocs-sphinx-search = "^0.1.0"
sphinx-autoapi = "^1.8.3"
toml = "^0.10.2"
bandit = "^1.7.0"
pylint = "^2.8.2"
vulture = "^2.3"
scikit-image = "==0.16.2"

[tool.poetry.urls]
"Project URL" = "https://redisai.io"
Repository = "https://github.com/RedisAI/redisai-py"
Documentation = "https://redisai.readhtedocs.io"
Homepage = "https://oss.redislabs.com/redisai/"
Tracker = "https://github.com/RedisAI/redisai-py/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
